# Snotra

./: CMakeLists.txt
client/: CMakeLists.txt  client.cpp
proto/: CMakeLists.txt  snotra.proto
server/: CMakeLists.txt  server.cpp
